final changes committed

--- a/index.html
+++ b/index.html
@@ -155,32 +155,31 @@
         <!-- Portfolio Section -->
         <div class="row">
             <!-- <div class="col-lg-12">
-                <h2 class="page-header" id="ph1" style="color:white"><b>Welcome to Edtech Marine Services</b></h2>
+                <h2 class="page-header" style="color: blue">Welcome to Edtech Marine Services</h2>
             </div> -->
-
             <div class="col-md-4 col-sm-6">
                 <title> About Us
-                </title>
+               </title>
 
-                <h2><b>About Us</b> </h2>
+               <h2>About Us </h2>
+                <a href="about.html">
+                    <img id="i1" class="img-circle img-portfolio img-hover" src="images/edtech.jpg" alt="" width="350" height="300">
 
-                <img id="i1" class="img-circle img-portfolio img-hover" src="images/edtech.jpg" alt="" width="350" height="300">
-
-                <!-- </a> -->
+                </a>
 
 
             </div>
             <div class="col-md-4 col-sm-6">
-                <h2><b> Products </b></h2>
-                <!-- <a href="product.html"> Continue Reading -->
-                <img id="i1" class="img-circle img-portfolio img-hover" src="images/safety_equipment.jpg" alt="" width="350" height="300">
-                <!-- </a> -->
+              <h2> Products</h2>
+                <a href="product.html">
+                    <img  id="i1"class="img-circle img-portfolio img-hover" src="images/safety_equipment.jpg" alt="" width="350" height="300">
+                </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <h2><b> Services </b></h2>
-                <!-- <a href="services.html"> Continue Reading -->
-                <img class="img-circle img-portfolio img-hover" src="images/Services.jpg" alt="" width="350" height="300">
-                <!-- </a> -->
+              <h2> Services</h2>
+                <a href="services.html">
+                    <img class="img-circle img-portfolio img-hover" src="images/Services.jpg" alt="" width="350" height="300">
+                </a>
 
             </div>
 
@@ -300,7 +299,7 @@
                         <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
                    </div> -->
             <div class="col-md-3 ">
-                <p style="font-size: 18px; color: white " > EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                <p style="font-size: 18px; color: white "> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
                 <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
@@ -311,7 +310,7 @@
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
-<!-- to add another contact copy paste the code below and make the relevant changes  -->
+                <!-- to add another contact copy paste the code below and make the relevant changes  -->
 
                 <!-- <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
@@ -383,7 +382,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2016</p>
+                <p>Copyright &copy; Edtech Marine Services. All rights reserved.</p>
             </div>
         </div>
     </footer>
