--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
     <title>Edtech Marine Services</title>
 
     <!-- Bootstrap Core CSS -->
-   <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
@@ -36,66 +36,66 @@
 
 
 
-      <!-- Navigation -->
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-          <div class="container">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                  </button>
-                  <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE</b></a>
-                   <!-- <img src="logo.png" alt="image1" id="logo"> -->
-              </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li>
-                          <a href="about.html">About</a>
-                      </li>
-                      <li class="dropdown active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="spares.html">Stores and Spares</a>
-                                </li>
-                                <li>
-                                    <a href="agency.html">Edtech Agency and Husbandry </a>
-                                </li>
-                                <li>
-                                    <a href="engineering.html">Edtech Engineering</a>
-                                </li>
-                                <li>
-                                    <a href="safety.html">Edtech Safety and Automation</a>
-                                </li>
-                                <li>
-                                    <a href="itservices.html">Edtech I.T Services</a>
-                                </li>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE</b></a>
+                <!-- <img src="logo.png" alt="image1" id="logo"> -->
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="spares.html">Stores and Spares</a>
+                            </li>
+                            <li>
+                                <a href="agency.html">Edtech Agency and Husbandry </a>
+                            </li>
+                            <li>
+                                <a href="engineering.html">Edtech Engineering</a>
+                            </li>
+                            <li>
+                                <a href="safety.html">Edtech Safety and Automation</a>
+                            </li>
+                            <li>
+                                <a href="itservices.html">Edtech I.T Services</a>
+                            </li>
 
-                            </ul>
-                        </li>
-                      <li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="product.html">Products</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a href="careers.html">Careers</a>
-                      </li>
-                      <li>
-                          <a href="contact.html">Contact Us</a>
-                      </li>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
 
 
-                      </li>
+                    </li>
 
-              </div>
-              <!-- /.navbar-collapse -->
-          </div>
-          <!-- /.container -->
-      </nav>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -112,7 +112,7 @@
             </div>
         </div>
         <!-- /.row -->
-</nav>
+        </nav>
         <!-- Intro Content -->
         <div class="row">
             <!---<div class="col-md-6">
@@ -121,43 +121,138 @@
             <div class="col-md-12">
 
 
-<p> Edtech Marine provides a full range of Marine services including: </p>
+                <p> Edtech Marine provides a full range of Marine services including: </p>
 
-<ul>
-  <li style="font-size: 18px"><a href="spares.html">Supply of Stores and Spares </a> </li>
-    <li style="font-size: 18px"><a href="engineering.html">Marine Engineering & Repairs</a> </li>
-    <li style="font-size: 18px"><a href="safety.html">Safety and Automation</a> </li>
-    <li style="font-size: 18px"><a href="itservices.html">I.T Services</a> </li>
-    <li style="font-size: 18px"><a href="agency.html">Agency & Husbandry
+                <ul>
+                    <li style="font-size: 18px"><a href="spares.html" style="color: darkblue">Supply of Stores and Spares </a> </li>
+                    <li style="font-size: 18px"><a href="engineering.html" style="color: darkblue">Marine Engineering & Repairs</a> </li>
+                    <li style="font-size: 18px"><a href="safety.html" style="color: darkblue">Safety and Automation</a> </li>
+                    <li style="font-size: 18px"><a href="itservices.html" style="color: darkblue">I.T Services</a> </li>
+                    <li style="font-size: 18px"><a href="agency.html" style="color: darkblue">Agency & Husbandry
 </a> </li>
-</ul>
+                </ul>
 
 
-<p> Please click on the above links for more information and do not hesitate to contact
-  us at<a href="contact.html"> info@edtech.com.sg</a> for supply and agency services and at <a href="engineering.html"> repairs@edtech.com.sg </a>
- for Engineering, Repairs, Safety and Automation services. Alternatively, call us at +65 6397 5980.</p>
-
-</div>
-
-
-
-
-
-
-
-
-
-
+                <p> Please click on the above links for more information and do not hesitate to contact us at<a href="mailto:info@edtech.com.sg" style="color: black"><u> info@edtech.com.sg</u></a>
+                  for supply and agency services and at <a href="mailto:repairs@edtech.com.sg" style="color: black"> <u>repairs@edtech.com.sg</u> </a> for Engineering,
+                    Repairs, Safety and Automation services. Alternatively, call us at +65 6397 5980.</p>
 
             </div>
+
+
+
+
+
+
+
+
+
+
         </div>
+    </div>
+<hr>
+
+
+    <div class="container-fluid" id="c2">
+     <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+    <!-- </div> -->
+
+      <div class="row color-blue">
+
+                  <!-- <div class="col-lg-12">
+                      <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                 </div> -->
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                    <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                    <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
+                 </div>
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                    <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                    <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+                 </div>
+
+
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                    <p style="font-size: 16px; color: white"> Mr Saini Singh, Engineer  </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+                 </div>
+
+
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                    <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                    <p style="font-size: 16px; color: white"> 2.Mr Jagjit Singh, Director</p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+                 </div>
+
+
+
+
+
+             </div>
+             </div>
+
+<!-- footer -->
+             <footer>
+                 <div class="row">
+                     <div class="col-lg-12">
+                         <p>Copyright &copy;  Edtech Marine Services. All rights reserved.</p>
+                     </div>
+                 </div>
+             </footer>
+
+           </div>
+
+
 
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-   <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
