--- a/agency.html
+++ b/agency.html
@@ -240,7 +240,7 @@
 
 
 
-                      
+
                      </div>
                      </div>
 
@@ -248,7 +248,7 @@
                      <footer>
                          <div class="row">
                              <div class="col-lg-12">
-                                 <p>Copyright &copy; Your Website 2016</p>
+                                 <p>Copyright &copy;  Edtech Marine Services. All rights reserved.</p>
                              </div>
                          </div>
                      </footer>
