--- a/careers.html
+++ b/careers.html
@@ -211,7 +211,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p> CCopyright &copy; Your Website 2016</p>
+                    <p> CCopyright &copy;  Edtech Marine Services. All rights reserved.</p>
                 </div>
             </div>
         </footer>
