--- a/contact.html
+++ b/contact.html
@@ -291,7 +291,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2016</p>
+                <p>Copyright &copy;  Edtech Marine Services. All rights reserved.</p>
             </div>
         </div>
     </footer>
