--- a/safety.html
+++ b/safety.html
@@ -376,7 +376,7 @@
 
 
 
-          
+
         </div>
     </div>
 
@@ -384,7 +384,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2016</p>
+                <p>Copyright &copy;  Edtech Marine Services. All rights reserved.</p>
             </div>
         </div>
     </footer>
