--- a/spares.html
+++ b/spares.html
@@ -365,7 +365,7 @@
 
 
 
-                  
+
                  </div>
                  </div>
 
@@ -373,7 +373,7 @@
                  <footer>
                      <div class="row">
                          <div class="col-lg-12">
-                             <p>Copyright &copy; Your Website 2016</p>
+                             <p>Copyright &copy;  Edtech Marine Services. All rights reserved.</p>
                          </div>
                      </div>
                  </footer>
